# pdf-to-web

./: .gitignore  CHANGELOG.md  README.md  generate_demo_multi.py  pyproject.toml
pdf_to_web/: __init__.py  chart_extractor.py  chart_renderer.py  generate_demo.py  pdf_to_yaml.py  verify_chart.py
src/pdf_to_web/: ai_chart_analyzer.py  chart_extractor.py  chart_renderer.py  cli.py  generate_demo.py  pdf_to_yaml.py  verify_chart.py  yaml_to_html.py
src/pdf_to_web/templates/: index.html
