[project]
name = "pdf-to-web"
version = "0.1.0"
description = "Convert PDF documents to professional web pages with structured content extraction"
readme = "README.md"
authors = [
    { name = "Henry Yao", email = "henryyao1126@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",
    "pyyaml>=6.0.0",
    "pillow>=10.0.0",
    "google-genai>=1.0.0",
]

[project.scripts]
pdf-to-web = "pdf_to_web.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pdf_to_web"]

[tool.hatch.build.targets.sdist]
include = ["/pdf_to_web"]
